<resources>
    <string name="app_name">Active Connections 1.1</string>
    <string name="tUsuario">Usuário</string>
    <string name="tSenha">Senha</string>
    <string name="bNovo">Cadastrar</string>
    <string name="bEntrar">Login</string>
    <string name="bOco">Ocorrência(s)</string>
    <string name="bRel">Relatório(s)</string>
    <string name="bConf">Configurações</string>
    <string name="bSair">Sair</string>
    <string name="bLimparCampos">Limpar Campos</string>
    <string name="bCancelar">Cancelar</string>
    <string name="bEntrar2">Entrar</string>
    <string name="bClient">Cliente</string>
    <string name="bAdicionarClt">Adicionar</string>
    <string name="bExcluirClt">Excluir</string>
    <string name="bVoltarClt">Voltar</string>
    <string name="idCliente">Cliente:0003</string>
    <string name="nomeCliente">Nome:Almendra</string>
    <string name="bInfo">Informações</string>
    <string name="bEnds">Endereço</string>
    <string name="bEmails">Email(s)</string>
    <string name="bTels">Telefones(s)</string>
    <string name="bCont">Contato(s)</string>
    <string name="bSalvar">Salvar</string>
    <string name="tDtInicialOco">Defina a data inicial....</string>
    <string name="bDtInicialOco"><![CDATA[>]]></string>
    <string name="tDtFinalOco">Defina a data final...</string>
    <string name="bDtFinalOco"><![CDATA[>]]></string>
    <string name="bNewUpdateOco">Nova Ocorrência</string>
    <string name="testeWS">Testar Web Service</string>
    <string name="listar">Lista Usuários</string>
    <string name="telaLoginBoasVindas">Bem Vindo ao Active Connections</string>
    <string name="statusWebService">Sem comunicação com o Web Service, verifique a sua conexão coma  Internet.</string>
    <string name="voltar">Voltar</string>
    <string name="tBoasVindas">Bem Vindo ao Active Connections</string>
    <string name="tStatusWS">Falha na comunicação com o Web Service, verifique a sua conexão com a Internet e tente novamente.</string>
    <string name="bAdicionarUsuario">Adicionar Usuário</string>
    <string name="bVoltar">Voltar</string>
    <string name="tAddUsuario">Preencha todos os campos abaixo para se cadastrar.</string>
</resources>
