<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activity.TelaCliente"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/idCliente"
                android:id="@+id/tCLienteId" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nomeCliente"
                android:id="@+id/tClientName" />
        </LinearLayout>

        <Spinner
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:id="@+id/sClientStatus"
            android:layout_weight="0.13" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView4" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bInfo"
            android:id="@+id/bClientInfo"
            android:layout_gravity="center_horizontal"
            android:onClick="clientInfos"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bEnds"
            android:id="@+id/bClientEnd"
            android:layout_gravity="center_horizontal"
            android:onClick="clientEnde"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bEmails"
            android:id="@+id/bClientEmail"
            android:layout_gravity="center_horizontal"
            android:onClick="clientEmail"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bTels"
            android:id="@+id/bClientTel"
            android:layout_gravity="center_horizontal"
            android:onClick="clientTel"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bCont"
            android:id="@+id/bClientCont"
            android:layout_gravity="center_horizontal"
            android:onClick="clientCont"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_weight="0">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/bSair"
            android:id="@+id/bClientSair"
            android:layout_gravity="bottom|right"
            android:onClick="backToClients"/>
    </LinearLayout>

</LinearLayout>
