<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.TelaOcorrenciaNewUpdate"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/tDtInicialOco"
            android:id="@+id/tDtInicialOco"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bDtInicialOco"
            android:id="@+id/bDtInicialOco"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/tDtFinalOco"
            android:id="@+id/tDtFinalOco"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bDtFinalOco"
            android:id="@+id/bDtFinalOco"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</LinearLayout>
