<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.TelaLogin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tBoasVindas"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Usuário..."
            android:id="@+id/eUsuario"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eSenha"
            android:inputType="textPassword"
            android:hint="Senha..." />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SPINNER (JS e VLLY)"
                android:id="@+id/button4"
                android:onClick="testeJSONVolley"
                android:layout_gravity="center_horizontal"
                android:enabled="true"
                android:visibility="visible"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DELETE (JS e VLLY)"
                android:id="@+id/button6"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="JSON"
            android:id="@+id/button5"
            android:onClick="testeJSON" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tStatusWS"
        android:id="@+id/tStatusWS"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bEntrar2"
            android:id="@+id/bEntrar"
            android:layout_weight="1"
            android:onClick="logar"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bNovo"
            android:id="@+id/bNovo"
            android:onClick="addUsuario"
            />

    </LinearLayout>

</LinearLayout>
