<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Controller.TelaClienteContatoEndereco"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/idCliente"
            android:id="@+id/textView2"
            android:layout_marginTop="15dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2"
            android:layout_weight="0.13"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bEnds"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="CEP:"
            android:ems="10"
            android:id="@+id/tCEndCep"
            android:layout_gravity="center_horizontal" />



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="175dp"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tCEndCit"
                    android:text="Cidade:" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="175dp"
                android:layout_height="match_parent">

               <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tCEndestd"
                    android:text="Estado:" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:id="@+id/tClientObs"
                android:text="Observações:"/>

            <EditText
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:id="@+id/tClientObs2"
                android:text="Observações:"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_gravity="right">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bSalvar"
            android:id="@+id/bClientSalvar"
            android:layout_gravity="left|right" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/bSair"
            android:id="@+id/bClientSair"
            android:layout_gravity="right"/>
    </LinearLayout>
</LinearLayout>
